NJR/scripts/checkers/cfnullness/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
warning: KeyForSubchecker did not find annotation file or directory ../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8 on classpath or within directory /home/nima/Desktop/nullability-docker/NJR/scripts/../wpi
    Classpath:
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/checker-util.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/checker.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/checker-qual.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/error_prone/jsr305-3.0.1.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/javac.jar
warning: NullnessChecker did not find annotation file or directory ../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8 on classpath or within directory /home/nima/Desktop/nullability-docker/NJR/scripts/../wpi
    Classpath:
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/checker-util.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/checker.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/checker-qual.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/error_prone/jsr305-3.0.1.jar
    file:/home/nima/Desktop/nullability-docker/NJR/scripts/tools/cf/checker/dist/javac.jar
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:11: error: (initialization.fields.uninitialized) $$ 1 $$ NotificationEmprunts $$ ( 182, 278 ) $$ the constructor does not initialize fields: NotificationEmprunts
	public Enseignant(int i, String n, String p, String t, int nbEM) {
	       ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Utilisateur.java:194: error: (return) $$ 2 $$ @Initialized @Nullable Emprunt $$ @Initialized @NonNull Emprunt $$ ( 3731, 3739 ) $$ incompatible types in return.
		return resultat;
		       ^
  type of expression: @Initialized @Nullable Emprunt
  method return type: @Initialized @NonNull Emprunt
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:22: error: (assignment) $$ 2 $$ null (NullType) $$ @Initialized @NonNull String $$ ( 430, 434 ) $$ incompatible types in assignment.
		commentaire = null;
		              ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:19: error: (initialization.fields.uninitialized) $$ 1 $$ stage $$ ( 313, 585 ) $$ the constructor does not initialize fields: stage
	public Projet(Cours c, ArrayList<utilisateurs.Etudiant> e, int i, String n, String d, Date dd, Date df) {
	       ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:99: error: (argument) $$ 4 $$ prof $$ Cours.setProf $$ null (NullType) $$ @Initialized @NonNull Enseignant $$ ( 2636, 2640 ) $$ incompatible argument for parameter prof of Cours.setProf.
		cours.setProf(null);		
		              ^
  found   : null (NullType)
  required: @Initialized @NonNull Enseignant
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:171: error: (return) $$ 2 $$ null (NullType) $$ @Initialized @NonNull Utilisateur $$ ( 4316, 4320 ) $$ incompatible types in return.
				return null;
				       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Utilisateur
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:38: error: (argument) $$ 4 $$ e $$ Projet constructor $$ null (NullType) $$ @Initialized @NonNull ArrayList<@Initialized @NonNull Etudiant> $$ ( 927, 931 ) $$ incompatible argument for parameter e of Projet constructor.
		Projet projet = new Projet(cours, null, idProjet, n, d, dd, df);
		                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull ArrayList<@Initialized @NonNull Etudiant>
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/test/Main.java:6: error: (argument) $$ 4 $$ args $$ Bdd.main $$ null (NullType) $$ @Initialized @NonNull String @Initialized @NonNull [] $$ ( 89, 93 ) $$ incompatible argument for parameter args of Bdd.main.
		Bdd.main(null);
		         ^
  found   : null (NullType)
  required: @Initialized @NonNull String @Initialized @NonNull []
8 errors
2 warnings
